Cosign/Cosign-image-verification/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-secret-pod-2
  namespace: test-verify-images
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-secret-2
